# kite

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES.md  README.md  TODO.md
data/core/: config.lua  docview.lua  init.lua  logview.lua  rootview.lua  style.lua  view.lua
doc/: usage.md
src/: main.c  renderer.c
src/api/: renderer.c  system.c
src/lib/stb/: stb_truetype.h
